# gamepad-gateway-usb2ble

./: .gitignore  CMakeLists.txt  Kconfig.projbuild  README.md  eslint.config.js  package-lock.json  package.json  sdkconfig.defaults  tsconfig.phase1.json  tsconfig.web.json  webble_test.html
.cache/clangd/index/: ble_gamepad.cpp.9BF2846FE9FBB3F6.idx  ble_gamepad.h.793EA7AD0D03C142.idx  enum.c.E4BF2114A964AFD7.idx  enum.h.681FE007656EAE17.idx  ext_hub.c.DFD99DE33EC4BA23.idx  ext_hub.h.C88B4BB0C74AEA5F.idx  ext_port.c.CBBE0D8ECE69ADE6.idx  ext_port.h.F54BC0233138A542.idx  hcd.h.267F4A1BD76E357A.idx  hcd_dwc.c.7E001CEA01F903AF.idx  hid.h.76DBDB0EB5803F98.idx  hid_device_manager.cpp.35DC067EB8810AC9.idx  hid_device_manager.h.DE28D84F7100BC8D.idx  hid_host.c.D8EB2F08AFACD5F1.idx  (+22 more)
docs/: ARCHITECTURE_BASELINE.md  CONFIG_SCHEMA.md  ELEMENT_MODEL.md  FIRMWARE_RELEASES.md  RUDDER_BUG_FINDINGS.md  WEBBLE_PROTOCOL.md
main/: CMakeLists.txt  app_mode.cpp  app_mode.h  ble_config_service.cpp  ble_config_service.h  ble_gamepad.cpp  ble_gamepad.h  hid_device_identity.cpp  hid_device_identity.h  hid_device_manager.cpp  hid_device_manager.h  hid_parser.cpp  hid_parser.h  hid_verbose.cpp  hid_verbose.h  idf_component.yml  input_decoder.cpp  input_decoder.h  input_elements.cpp  input_elements.h  main.cpp  mapping_engine.cpp  mapping_engine.h  nvs_profile_store.cpp  nvs_profile_store.h
scripts/: build.sh  clean.sh  flash.sh  generate_firmware_manifest.py
webapp/: README.md  app.js  firmware-installer.js  flash.css  flash.html  index.html  styles.css  validation.css  validation.html  validation.js
webapp/firmware/: README.md
webapp/shared/: browser-apis.d.ts  dom.js  firmware-release.js  hotas-types.js  three-url.d.ts  types.js
(+5 files in other folders)
